Adjusted CSS media query for .card-img-top to see if it fixes image size on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -92,7 +92,8 @@ header .logo {
   }
 
   .card-img-top {
-    flex-basis: 40%; /* Reset flex-basis for image */
+    width: 100%;
+    flex-basis: auto; /* Reset flex-basis for image */
     object-fit: cover;
   }
 
